crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__motion__sheet_slide.snap
---
source: crates/bingo-surface-tui/src/motion.rs
expression: "frames.join(\"\\n\")"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                          │"
"│                                                                              │"
"enter        send the message · open the focused block                          "
"shift+enter  newline (ctrl+j · alt+enter · \ enter)                             "
"esc          sheet → card → dropdown → interrupt                                "
"esc esc      rewind to an earlier turn                                          "
"ctrl+c       interrupt · clear input · twice to exit                            "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                      fake/fake-1"

"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"enter        send the message · open the focused block                          "
"shift+enter  newline (ctrl+j · alt+enter · \ enter)                             "
"esc          sheet → card → dropdown → interrupt                                "
"esc esc      rewind to an earlier turn                                          "
"ctrl+c       interrupt · clear input · twice to exit                            "
"ctrl+d       exit on an empty input                                             "
"up/down      prompt history at the first and last line                          "
"down         walk the sessions (empty box)                                      "
"ctrl+a/e     start / end of the line (home · end)                               "
"alt+b/f      move one word                                                      "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                      fake/fake-1"

"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"enter        send the message · open the focused block                          "
"shift+enter  newline (ctrl+j · alt+enter · \ enter)                             "
"esc          sheet → card → dropdown → interrupt                                "
"esc esc      rewind to an earlier turn                                          "
"ctrl+c       interrupt · clear input · twice to exit                            "
"ctrl+d       exit on an empty input                                             "
"up/down      prompt history at the first and last line                          "
"down         walk the sessions (empty box)                                      "
"ctrl+a/e     start / end of the line (home · end)                               "
"alt+b/f      move one word                                                      "
"ctrl+w/u/k   delete word · to line start · to line end                          "
"pgup/pgdn    scroll the transcript                                              "
"v            select from the focused block · ↑↓←→ extend · y or ctrl+c copy     "
"drag         select · release copies · past the edge scrolls                    "
"ctrl+g       the same list · ↑↓ to walk it                                      "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                      fake/fake-1"

"enter        send the message · open the focused block                          "
"shift+enter  newline (ctrl+j · alt+enter · \ enter)                             "
"esc          sheet → card → dropdown → interrupt                                "
"esc esc      rewind to an earlier turn                                          "
"ctrl+c       interrupt · clear input · twice to exit                            "
"ctrl+d       exit on an empty input                                             "
"up/down      prompt history at the first and last line                          "
"down         walk the sessions (empty box)                                      "
"ctrl+a/e     start / end of the line (home · end)                               "
"alt+b/f      move one word                                                      "
"ctrl+w/u/k   delete word · to line start · to line end                          "
"pgup/pgdn    scroll the transcript                                              "
"v            select from the focused block · ↑↓←→ extend · y or ctrl+c copy     "
"drag         select · release copies · past the edge scrolls                    "
"ctrl+g       the same list · ↑↓ to walk it                                      "
"ctrl+t       show / hide the task list                                          "
"ctrl+p       plugin state (rooms, panels to pin)                                "
"tab          complete → queue → next card                                       "
"shift+tab    cycle permission mode                                              "
"1-9 · y/a/n  answer the open dialog                                             "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                      fake/fake-1"

"enter        send the message · open the focused block                          "
"shift+enter  newline (ctrl+j · alt+enter · \ enter)                             "
"esc          sheet → card → dropdown → interrupt                                "
"esc esc      rewind to an earlier turn                                          "
"ctrl+c       interrupt · clear input · twice to exit                            "
"ctrl+d       exit on an empty input                                             "
"up/down      prompt history at the first and last line                          "
"down         walk the sessions (empty box)                                      "
"ctrl+a/e     start / end of the line (home · end)                               "
"alt+b/f      move one word                                                      "
"ctrl+w/u/k   delete word · to line start · to line end                          "
"pgup/pgdn    scroll the transcript                                              "
"v            select from the focused block · ↑↓←→ extend · y or ctrl+c copy     "
"drag         select · release copies · past the edge scrolls                    "
"ctrl+g       the same list · ↑↓ to walk it                                      "
"ctrl+t       show / hide the task list                                          "
"ctrl+p       plugin state (rooms, panels to pin)                                "
"tab          complete → queue → next card                                       "
"shift+tab    cycle permission mode                                              "
"1-9 · y/a/n  answer the open dialog                                             "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                      fake/fake-1"
